# fastapi-cython-example

./: README.md  build.py  pyproject.toml  test.sh
src/: app.py  main.py
