[tool.poetry]
name = "fastapi_cython_example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.104.0", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
cython = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
